[skip ci] Fixed jogs

--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -19,7 +19,7 @@
           </div>
 
           <%= link_to user_omniauth_authorize_path(:facebook), :class => "btn btn-facebook" do %>
-            <span class="fa fa-facebook"></span> Login com Facebook
+            <span class="fa fa-facebook"></span> Cadastro com Facebook
           <% end %>
         </div>
 
