--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
         </ul>
       </nav>
       <div class="nav-social">
-        <a href="#"><span class="fa fa-facebook-square"></span></a>
+        <a href="http://www.fb.com/novacurriculos"><span class="fa fa-facebook-square"></span></a>
       </div>
     </div>
   </div>
