--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -4,7 +4,7 @@
       <span class="logged-avatar">
         <% if current_user.candidate.try(:image) %>
           <%= link_to show_curriculum_candidate_path do %>
-          <%= image_tag current_user.candidate.avatar %>
+          <%= image_tag current_user.candidate.avatar("thumb_min") %>
           <% end %>
         <% elsif current_user.company.try(:logo)%>
           <%= link_to company_path do %>
