Fixed avatar curriculum

--- a/app/views/candidates/show_profile.html.erb
+++ b/app/views/candidates/show_profile.html.erb
@@ -23,7 +23,7 @@
         <div class="profile-header margin-bottom">
           <div class="profile-avatar-container">
             <figure class="profile-avatar">
-              <%= image_tag current_user.candidate.avatar("thumb") %>
+              <%= image_tag @candidate.avatar("thumb") %>
             </figure>
           </div>
           <div class="profile-info">
