--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -128,12 +128,12 @@
           </div>
 
           <div class="vacancy-options">
-            <% if current_user.is_candidate %>
-            <% if @job.candidate_to_job?(current_user) %>
-            <h2>Boa sorte, esta vaga já esta em sua lista</h2>
-            <% else %>
-            <%= link_to "Candidatar-se a Vaga", apply_for_job_path(@job.id), method: :post, :class => "btn btn-blue" %>
-            <% end %>
+            <% if current_user.is_candidate && @job.finish_date >= Time.now %>
+              <% if @job.candidate_to_job?(current_user) %>
+              <h2>Boa sorte, esta vaga já esta em sua lista</h2>
+              <% else %>
+              <%= link_to "Candidatar-se a Vaga", apply_for_job_path(@job.id), method: :post, :class => "btn btn-blue" %>
+              <% end %>
             <% end %>
             <a class="btn btn-facebook" href="#">
               <span class="fa fa-facebook-square"></span> Recomende esta Vaga
