--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -26,6 +26,7 @@
         <% else %>
         <li><%= link_to "Meu perfil", show_candidate_profile_path(current_user.slug), :class => "btn btn-link" %></li>
         <li><%= link_to "Currículo", show_curriculum_candidate_path, :class => "btn btn-link" %></li>
+        <li><%= link_to "Minhas Vagas", show_vacancies_path, :class => "btn btn-link"%></li>
         <% end %>
         <li><%= link_to "Trocar senha", edit_user_registration_path, :class => "btn btn-link" %></li>
         <li>
