--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -26,6 +26,7 @@
 @import "project/components/vacancy";
 @import "project/components/profile";
 @import "project/components/display";
+@import "project/components/plan";
 
 // @import "vendor/fancybox";
 // @import "vendor/jcarousel";
