--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -100,13 +100,23 @@
             </div>
 
             <div class="form-submit-container">
-              <div class="page-slogan margin-bottom">
-                <div class="page-slogan-text">
-                  <p>
-                    Deixe sua vaga em evidência entre as <br>
-                    primeiras vagas do site, contrate agora <br>
-                    a nossa <a href="#">vaga premium</a>.
-                  </p>
+              <div class="page-vacancy-slogan margin-large-bottom">
+                <div class="page-slogan">
+                  <div class="page-slogan-text">
+                    <p>
+                      Deixe sua vaga em evidência entre as primeiras vagas do site,
+                      contrate agora a nossa <a href="#">vaga premium</a>.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="page-text">
+                  <p>Assine vaga premium por um (1) mês.</p>
+
+                  <div class="page-price-container">
+                    <span class="page-coin">por:</span>
+                    <span class="page-price">R$ 000,00</span>
+                  </div>
                 </div>
               </div>
 
