--- a/app/views/cart/checkout.html.erb
+++ b/app/views/cart/checkout.html.erb
@@ -1,1 +1,67 @@
-<%= pagseguro_form @order, :submit => "Efetuar pagamento!" %>
+<main id="main">
+  <div class="grid padding-top">
+    <section>
+      <div class="page-title-container">
+        <h1 class="page-title">
+          <span class="nc-min-icon nc-min-recruiters"></span>
+          <span>Vaga Premium</span>
+        </h1>
+      </div>
+
+      <div class="col-6 col-center text-center">
+        <div class="page-slogan">
+          <div class="page-slogan-text">
+            <p>
+              Escolha qual plano se adequa melhor <br>
+              a sua necessidade.
+            </p>
+          </div>
+        </div>
+
+        <div class="page-text margin-large-bottom">
+          <p>
+            A vaga selecionada ficará em evidência no site pelo período contratado.
+            Assim que o pagamento for confirmado pelo <a href="#">PagSeguro</a>
+            sua vaga será automaticamente promovida.
+          </p>
+        </div>
+      </div>
+
+        <div class="col-8 col-center">
+          <div class="row margin-large-bottom">
+            <% PremiumPlan.all.each do |premium_plan|%>
+            <div class="col-4 col-left padding-right">
+              <div class="plan-container">
+                <div class="plan">
+                  <span class="fa fa-star"></span>
+                  <p><%= premium_plan.description %></p>
+
+                  <div class="plan-price-container">
+                    <span class="plan-coin">Por:</span>
+                    <span class="plan-price">R$ <%= premium_plan.price %></span>
+                  </div>
+                </div>
+
+                <div class="plan-radio">
+                  <%= pagseguro_form @order, :submit => "Desejo este plano!" %>
+                </div>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
+
+      <div class="row text-center">
+        <div class="margin-small-bottom">
+          <%= link_to "http://www.pagseguro.com.br" do %>
+          <%= image_tag "pagseguro.png" %>
+          <% end %>
+        </div>
+
+        <div class="page-text">
+          <p>*Enquanto o pagamento não for concluído sua vaga ficará disponível normalmente, sem destaque.</p>
+        </div>
+      </div>
+    </section>
+  </div>
+</main>
