Fixeds and implementation of the buttom load more

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -74,7 +74,7 @@
         </ul>
       </div>
 
-      <a class="btn btn-bright-green btn-block btn-extra" href="#">Ver mais vagas</a>
+      <a id="loadMore" class="btn btn-bright-green btn-block btn-extra" href="#">Veja mais vagas</a>
     </div>
   </div>
 </main>
