--- a/app/views/candidates/show_profile.html.erb
+++ b/app/views/candidates/show_profile.html.erb
@@ -12,8 +12,8 @@
         <h2 class="profile-nav-title">Menu</h2>
         <ul class="profile-nav">
           <% if current_user.candidate == @candidate %>
-          <li><a class="btn btn-link" href="#">Minhas Vagas</a></li>
-          <li><a class="btn btn-link" href="#">Editar Currículo</a></li>
+          <li><%= link_to "Minhas Vagas", show_vacancies_path, :class => "btn btn-link"%></li>
+          <li><%= link_to "Currículo", show_curriculum_candidate_path, :class => "btn btn-link" %></li>
           <% end %>
           <li><a class="btn btn-link" href="#">Salvar este currículo em PDF</a></li>
         </ul>
