--- a/app/views/candidates/show_profile.html.erb
+++ b/app/views/candidates/show_profile.html.erb
@@ -15,7 +15,7 @@
           <li><%= link_to "Minhas Vagas", show_vacancies_path, :class => "btn btn-link"%></li>
           <li><%= link_to "Currículo", show_curriculum_candidate_path, :class => "btn btn-link" %></li>
           <% end %>
-          <li><a class="btn btn-link" href="#">Salvar este currículo em PDF</a></li>
+          <li><%= link_to "Salvar este currículo em PDF", generate_pdf_path, :class => "btn btn-link" %></li>
         </ul>
       </section>
     </div>
