--- a/app/views/candidates/show_vacancies.html.erb
+++ b/app/views/candidates/show_vacancies.html.erb
@@ -15,7 +15,7 @@
           <li><%= link_to "Minhas Vagas", show_vacancies_path, :class => "btn btn-link"%></li>
           <li><%= link_to "Currículo", show_curriculum_candidate_path, :class => "btn btn-link" %></li>
           <% end %>
-          <li><a class="btn btn-link" href="#">Salvar este currículo em PDF</a></li>
+          <li><%= link_to "Salvar este currículo em PDF", generate_pdf_path, :class => "btn btn-link" %></li>
         </ul>
       </section>
     </div>
@@ -23,8 +23,8 @@
     <div class="col-8 col-right padding-left">
       <h1 class="profile-caption">Minhas Vagas</h1>
       <div class="summary">
-        <i class="f1 fa fa-circle active_job"></i> Vagas aprovadas
-        <i class="f1 fa fa-circle inactive_job"></i> Vagas em aprovação
+        <i class="f1 fa fa-circle active_job"></i> Vagas ativas
+        <i class="f1 fa fa-circle inactive_job"></i> Vagas inativas
       </div>
       <ul class="profile-vacancies">
         <% @jobs.each do |job| %>
