[skip ci] [Finish#77968848] Fixeds generate pdf

--- a/app/views/candidates/generate_curriculo_in_pdf.html.erb
+++ b/app/views/candidates/generate_curriculo_in_pdf.html.erb
@@ -1,8 +1,10 @@
+<% @candidate = Candidate.find(params[:id]) %>
 <html>
   <head>
     <title>teste</title>
   </head>
   <body>
       <%= @candidate.full_name %>
+      <%= @candidate.birth_date %>
   </body>
 </html>
