--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -556,6 +556,18 @@
           </div>
         </div>
 
+        <% if !@candidate.share_facebook %>
+        <div class="form-radio">
+          <div class="form-radio-item form-inline">
+            <label for="termos_de_uso">*Pagar com um post no facebook <a href="#">Saiba mais.</a></label>
+            <%= f.check_box :share_facebook, {:required => true}, "true", "false" %>
+          </div>
+        </div>
+        <% end %>
+
+        <%= link_to 'Share on Facebook', '#', :class => "fb_share"  %>
+        <%= facebook_share_once %>
+
         <%= f.hidden_field :id %>
         <%= f.submit "Concluir currículo e pagar com um post", :class => "btn btn-facebook" %>
       </div>
