--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,5 @@
 @import "main";
+@import "print";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
