--- a/app/views/candidates/generate_curriculo_in_pdf.html.erb
+++ b/app/views/candidates/generate_curriculo_in_pdf.html.erb
@@ -1,10 +1,166 @@
 <% @candidate = Candidate.find(params[:id]) %>
-<html>
+<!doctype html>
+<html lang="pt-BR">
   <head>
-    <title>teste</title>
+    <meta charset="UTF-8">
+    <title><%= @candidate.full_name %> - Nova Currículos</title>
+
+    <style type="text/css">
+      html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}dfn{font-style:italic}h1{font-size:1em;margin:0}mark{background:#ff0;color:#000}small{font-size:100%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}img{border:0}svg:not(:root){overflow:hidden}figure{margin:0}hr{-moz-box-sizing:content-box;box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace, monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */html{color:#222;font-size:1em;line-height:1.4}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}audio,canvas,img,svg,video{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.browsehappy{margin:0.2em 0;background:#ccc;color:#000;padding:0.2em 0}.margin{margin:0 10px}.margin-top{margin-top:20px}.margin-bottom{margin-bottom:20px}.margin-left{margin-left:20px}.margin-right{margin-right:20px}.margin-small{margin:0 5px}.margin-small-top{margin-top:10px}.margin-small-bottom{margin-bottom:10px}.margin-small-left{margin-left:10px}.margin-small-right{margin-right:10px}.margin-large{margin:0 80px}.margin-large-top{margin-top:40px}.margin-large-bottom{margin-bottom:40px}.margin-large-left{margin-left:40px}.margin-large-right{margin-right:40px}.padding{padding:0 10px}.padding-top{padding-top:20px}.padding-bottom{padding-bottom:20px}.padding-left{padding-left:20px}.padding-right{padding-right:20px}.padding-small{padding-right:5px}.padding-small-top{padding-top:10px}.padding-small-bottom{padding-bottom:10px}.padding-small-left{padding-left:10px}.padding-small-right{padding-right:10px}.padding-large{padding-top:40px}.padding-large-top{padding-top:40px}.padding-large-bottom{padding-bottom:40px}.padding-large-left{padding-left:40px}.padding-large-right{padding-right:40px}.grid,.grid-relative{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:960px;margin:0 auto}.grid-relative{position:relative}.row{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:100%}.col-1{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:8.33333%}.col-2{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:16.66667%}.col-3{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:25%}.col-4{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:33.33333%}.col-5{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:41.66667%}.col-6{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:50%}.col-7{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:58.33333%}.col-8{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:66.66667%}.col-9{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:75%}.col-10{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:83.33333%}.col-11{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:91.66667%}.col-12{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:100%}.col-left{float:left}.col-right{float:right}.col-center{float:none;margin:0 auto}.profile{cursor:default}.profile-header{position:relative;padding-bottom:30px}.profile-avatar-container{position:absolute;top:0;left:0;text-align:center}.profile-avatar{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:100px;height:100px;overflow:hidden}.profile-info{padding:10px 0 0 120px}.profile-title{color:#222;font-size:22px;margin:0 0 10px;padding-bottom:5px;margin-bottom:10px;border-bottom:solid 1px #ccc}.profile-item-caption{color:#555;font-weight:600}.profile-description{padding-bottom:20px;border-bottom:solid 1px #ccc}.profile-caption{cursor:default;color:#222;font-size:20px;font-weight:800;padding-bottom:5px;margin:0 0 10px;border-bottom:solid 1px #ccc}.profile-text{color:#222;font-size:14px}.profile-text p{margin:0 0 4px}.profile-text a{color:#222}.profile-text ul,.profile-text ol{margin:0;padding-left:30px}.profile-list{margin:0;padding-left:20px}.profile-list li{color:#222;font-size:14px;padding-bottom:10px;margin-bottom:10px}.profile-list p{color:#222;margin:0 0 5px}.profile-list-title{color:#222;font-size:16px;font-weight:800;margin:0 0 5px}.profile-list-caption{color:#555}.hidden{display:none !important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.grid:before,.grid-relative:before,.row:before,.clearfix:after,.grid:after,.grid-relative:after,.row:after{content:" ";display:table}.clearfix:after,.grid:after,.grid-relative:after,.row:after{clear:both}@media print{*{background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}a[href^="#"]:after,a[href^="javascript:"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
+    </style>
   </head>
+
   <body>
-      <%= @candidate.full_name %>
-      <%= @candidate.birth_date %>
+    <div class="grid">
+      <article class="profile">
+        <div class="profile-header margin-bottom">
+          <div class="profile-avatar-container">
+            <figure class="profile-avatar">
+              <%= image_tag @candidate.avatar("thumb") %>
+            </figure>
+          </div>
+          <div class="profile-info">
+            <h1 class="profile-title"><%= @candidate.full_name %></h1>
+
+            <div class="profile-text margin-small-bottom">
+              <p><a href="#"><%= @candidate.user.email %></a></p>
+              <p><span class="profile-item-caption">Sexo:</span> <%= @candidate.is_male ? "Masculino" : "Feminio" %> </p>
+              <p><span class="profile-item-caption">Data de nascimento:</span> <%= @candidate.birth_date.strftime("%d/%m/%Y") %></p>
+              <p><span class="profile-item-caption">Endereço:</span> <%= @candidate.street %></p>
+            </div>
+
+            <div class="row margin-small-bottom">
+              <div class="profile-text col-4 col-left">
+                <p><span class="profile-item-caption">Número:</span> <%= @candidate.number %></p>
+              </div>
+
+              <div class="profile-text col-4 col-left">
+                <p><span class="profile-item-caption">Complemento:</span> <%= @candidate.complement %></p>
+              </div>
+
+              <div class="profile-text col-4 col-right">
+                <p><span class="profile-item-caption">CEP:</span> <%= @candidate.zip_code %></p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="profile-text col-6 col-left">
+                <p><span class="profile-item-caption">Telefone:</span> <%= @candidate.home_phone %></p>
+                <p><span class="profile-item-caption">Telefone:</span> <%= @candidate.mobile_phone %></p>
+              </div>
+
+              <div class="profile-text col-6 col-right">
+                <p><span class="profile-item-caption">Telefone:</span> <%= @candidate.message_phone %></p>
+                <p><span class="profile-item-caption">Telefone:</span> <%= @candidate.commercial_phone %></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="profile-item margin-large-bottom">
+          <div class="margin-bottom">
+            <h2 class="profile-caption">Objetivos Profissionais</h2>
+            <ul class="profile-list">
+              <li>
+                <p><span class="profile-list-caption">Área Profissional:</span>
+                <% @candidate.professional_areas.each do |professional_area| %>
+                <%= professional_area.name << "; " %>
+                <% end %>
+                </p>
+                <p><span class="profile-list-caption">Nível Hierárquico:</span>
+                <% @candidate.hierarchical_levels.each do |hierarchical_level| %>
+                <%= hierarchical_level.name << "; " %>
+                <% end %>
+                </p>
+                <% if current_user.is_company? || current_user == @candidate.user %>
+                <p><span class="profile-list-caption">Último Salário:</span> R$ <%= @candidate.last_salary %></p>
+                <p><span class="profile-list-caption">Pretenção Salarial:</span> R$ <%= @candidate.salary_to_be_agreed ? "à combinar" :  @candidate.salary_pretension%></p>
+                <% end %>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-item margin-large-bottom">
+          <div class="margin-bottom">
+            <h2 class="profile-caption">Formação Acadêmica</h2>
+            <ul class="profile-list">
+              <% @candidate.academic_trainings.each do |academic_training| %>
+              <li>
+                <h3 class="profile-list-title"><%= academic_training.schooling.name %></h3>
+                <p><span class="profile-list-caption">Curso:</span> <%= academic_training.name_of_course %></p>
+                <p><span class="profile-list-caption">Instituição:</span> <%= academic_training.institution %></p>
+                <p><span class="profile-list-caption">Início:</span> <%= academic_training.start_date.strftime("%d/%m/%Y") %></p>
+                <p><span class="profile-list-caption">Conclusão:</span> <%= academic_training.finish_date.strftime("%d/%m/%Y") %></p>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-item margin-large-bottom">
+          <div class="margin-bottom">
+            <h2 class="profile-caption">Cursos Extras e Eventos</h2>
+            <ul class="profile-list">
+              <% @candidate.extra_courses.each do |extra_course| %>
+              <li>
+                <h3 class="profile-list-title"><%= extra_course.name %></h3>
+                <p><span class="profile-list-caption">Local:</span> <%= extra_course.local %></p>
+                <p><%= extra_course.description %></p>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-item margin-large-bottom">
+          <div class="margin-bottom">
+            <h2 class="profile-caption">Idiomas</h2>
+            <ul class="profile-list">
+              <% @candidate.languages.each do |language| %>
+              <li>
+                <h3 class="profile-list-title"><%= language.speech %></h3>
+                <p><span class="profile-list-caption">Nível:</span> <%= name_level language.level %></p>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-item margin-large-bottom">
+          <div class="margin-bottom">
+            <h2 class="profile-caption">Experiência Profissional</h2>
+            <ul class="profile-list">
+              <% @candidate.professional_experiences.each do |professional_experience| %>
+              <li>
+                <h3 class="profile-list-title"><%= professional_experience.name_company %></h3>
+                <p><span class="profile-list-caption">Último Cargo:</span> <%= professional_experience.last_post %></p>
+                <p><span class="profile-list-caption">Início:</span> <%= professional_experience.start_date.strftime("%d/%m/%Y")%></p>
+                <p><%= professional_experience.jobs_current ? "Emprego atual" : "<span class='profile-list-caption'>Saída:</span> ".html_safe << professional_experience.finish_date.strftime("%d/%m/%Y")%></p>
+                <p>
+                  <div class="profile-list-caption">Atribuições e realizações do cargo:</div>
+                <p>
+                    <%= professional_experience.attributions %>
+                </p>
+                </p>
+              </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-item margin-large-bottom">
+        <div class="margin-bottom">
+          <h2 class="profile-caption">Mini Currículo</h2>
+          <div class="profile-text">
+            <p>
+              <%= @candidate.mini_curriculum %>
+            </p>
+          </div>
+        </div>
+      </div>
+    </article>
+    </div>
+
   </body>
 </html>
