[skip ci] Job premiun

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -111,11 +111,11 @@
                 </div>
 
                 <div class="page-text">
-                  <p>Assine vaga premium por um (1) mês.</p>
+                  <p><%=  PremiumPlan.first.description %></p>
 
                   <div class="page-price-container">
                     <span class="page-coin">por:</span>
-                    <span class="page-price">R$ 000,00</span>
+                    <span class="page-price">R$ <%=  PremiumPlan.first.price %></span>
                   </div>
                 </div>
               </div>
