--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -22,6 +22,6 @@
       <span class="fa fa-facebook"></span> Login com Facebook
     <% end %>
 
-    <a class="btn btn-link" href="#">Ainda não sou cadastrado(a)</a>
+    <%= link_to "Ainda não sou cadastrado(a)", static_page_not_registered_path, :class => "btn btn-link"%>
   </div>
 </div>
