--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -551,7 +551,7 @@
 
         <div class="form-radio">
           <div class="form-radio-item form-inline">
-            <label for="termos_de_uso">*li e concordo com os <%= link_to "Termos de uso", terms_path %></label>
+            <label for="termos_de_uso">*li e concordo com os <%= link_to "Termos de uso", page_path('termos-de-uso') %></label>
             <%= f.check_box :term, {:required => true}, "true", "false" %>
           </div>
         </div>
