--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -122,7 +122,7 @@
 
               <div class="form-radio">
                 <div class="form-radio-item form-inline">
-                  <label for="termos_de_uso">*li e concordo com os <%= link_to "Termos de uso", terms_path %></label>
+                  <label for="termos_de_uso">*li e concordo com os <%= link_to "Termos de uso", page_path("temos-de-uso")%></label>
                   <%= f.check_box :term, {:required => true}, "true", "false" %>
                 </div>
               </div>
