--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,8 @@
   <div class="grid">
     <div id="logo">
       <a href="/">
-        <h1>Nova Currículo</h1>
+        <span>beta</span>
+        <h1>Nova Currículos</h1>
       </a>
     </div>
 
