[skip ci] job premium

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,9 +64,8 @@
                   <span class="fa fa-map-marker"></span> <%= job.city.name %> / <%= job.city.state.iso %>
                 </p>
               <% end %>
-
               <a class="vacancies-social" href="#">
-                <span class="fa fa-facebook-square"></span> Recomende esta Vaga
+                <span class="fa fa-facebook-square"></span>
               </a>
             </section>
           </li>
