--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,7 @@
     <div id="nav-container">
       <nav id="nav" class="nav-active">
         <ul>
+          <li><%= link_to "Vaga Premium", page_path("vaga-premium") %></li>
           <% if current_user.nil? %>
           <li><%= link_to "Candidatos", new_candidate_path %></li>
           <li><%= link_to "Contratantes", new_contractor_path %></li>
