--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,7 +65,7 @@
                 </p>
               <% end %>
               <a class="vacancies-social" href="#">
-                <span class="fa fa-facebook-square"></span>
+                <span class="fa fa-facebook-square"></span> Recomendar vaga
               </a>
             </section>
           </li>
