--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -22,6 +22,6 @@
       <span class="fa fa-facebook"></span> Login com Facebook
     <% end %>
 
-    <%= link_to "Ainda não sou cadastrado(a)", page_path('cadastrar'), :class => "btn btn-link"%>
+    <%= link_to "Esqueceu sua senha?", new_user_password_path, :class => "btn btn-link"%>
   </div>
 </div>
