--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,10 @@
           <span>Editar dados de acesso</span>
         </h1>
       </div>
-
+      <p class="text-center information">
+        <strong>Atenção</strong> : Somente é possível trocar senha de contas cadastradas diretamente no site. <br> Caso tenha criado sua
+        conta utilizando o Facebook, ela não poderá ser trocada pelo sistema.
+      </p>
       <div class="col-5 col-center text-center">
         <div class="margin-large-bottom">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :class => 'form-curriculo', html: { method: :put }) do |f| %>
